@@ -1,123 +1,127 @@
 package com.example.text2cypher.cypher_benchmark.proto_nl;
 import com.example.text2cypher.cypher_utils.cqp.Filter;
 import com.example.text2cypher.cypher_utils.cqp.GroupKey;
+import com.example.text2cypher.cypher_utils.cqp.Measure;
 import com.example.text2cypher.cypher_utils.cqp.OrderSpec;
-import com.example.text2cypher.cypher_utils.cqp.PostAggregationType;
 import com.example.text2cypher.cypher_benchmark.dto.OlapQueryDto;
 import com.example.text2cypher.cypher_benchmark.dto.PostAggregationDto;
-import com.example.text2cypher.cypher_benchmark.dto.QueryType;
 import org.springframework.stereotype.Component;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class ProtoNLGenerator {
-    public String generate(OlapQueryDto gqp) {
-        StringBuilder protNl = new StringBuilder(getProtoKey(gqp));
-        protNl.append(" filter by ");
-        for(Filter constraint : gqp.getFilters()) {
-            protNl.append(" ").append(constraint.getDimension()).append(" ")
-                    .append(constraint.getValue()).append(",");
+
+    public String generate(OlapQueryDto dto) {
+        StringBuilder sb = new StringBuilder();
+        appendGroupBy(sb, dto.getGroupBy());
+        appendGlobalFilters(sb, dto.getFilters());
+        appendMeasures(sb, dto.getMeasures());
+        appendPostAggregations(sb, dto.getPostAggregations());
+        appendOrder(sb, dto.getOrders());
+        appendLimitOffset(sb, dto.getLimit(), dto.getOffset());
+        appendReturn(sb, dto.getReturns());
+
+        return sb.toString().trim();
+    }
+    private void appendGroupBy(StringBuilder sb, List<GroupKey> groupBy) {
+        if (groupBy == null || groupBy.isEmpty()) return;
+        for (GroupKey g : groupBy) {
+            sb.append("Group the ")
+                    .append(g.getDimension()).append(" AS ").append(g.getAlias());
+            sb.append(",\n");
         }
-        return protNl.toString();
+    }
+    private void appendGlobalFilters(StringBuilder sb, List<Filter> filters) {
+        if (filters == null || filters.isEmpty()) return;
+        sb.append("Apply Global filters ");
+        for (Filter f : filters) {
+                    sb.append(f.getDimension())
+                    .append(" ")
+                    .append(f.getOperator())
+                    .append(" ")
+                    .append(formatValue(f.getValue()))
+                    .append(",\n");
+        }
+    }
+    private void appendMeasures(StringBuilder sb, List<Measure> measures) {
+        if (measures == null || measures.isEmpty()) return;
+        sb.append("Calculate ");
+        for (Measure m : measures) {
+           sb.append(m.getAggregationType());
+            if (m.getFilters() != null && !m.getFilters().isEmpty()) {
+                sb.append(" WHERE ");
+                sb.append(m.getFilters().stream()
+                        .map(this::formatFilterInline)
+                        .collect(Collectors.joining(" AND "))
+                );
+            }
+            sb.append(" AS ").append(m.getAlias());
+            sb.append(",\n");
+        }
     }
 
-    private String getProtoKey(OlapQueryDto dto) {
-        StringBuilder protoKey = new StringBuilder();
-        if(dto.getQueryType().equals(QueryType.PRIORITY_ORDER)) {
-            getPriorityOrderProtoKey(protoKey, dto);
-        }
-        else if(dto.getQueryType().equals(QueryType.COUNT)){
-            getCountProtoKey(protoKey, dto);
-        }
-        else if(dto.getQueryType().equals(QueryType.AGGREGATION)){
-            getAggregationProtoKey(protoKey, dto);
-        }
-        else if(dto.getQueryType().equals(QueryType.DOMINANT_ATTRIBUTION)){
-            getDominantAttributionProtoKey(protoKey, dto);
-        }
-        else if(dto.getQueryType().equals(QueryType.DIFFERENCE)){
-            getDifferenceProtoKey(protoKey, dto);
-        }
-        else if(dto.getQueryType().equals(QueryType.RATIO)){
-            getRatioProtoKey(protoKey, dto);
-        }
-        else if(dto.getQueryType().equals(QueryType.BOOLEAN)){
-            getBooleanProtoKey(protoKey, dto);
-        }
-        else if(dto.getQueryType().equals(QueryType.RANKING)){
-            getRankingProtoKey(protoKey, dto);
-        }
-        return protoKey.toString();
-    }
-    public void getRankingProtoKey(StringBuilder protoKey, OlapQueryDto dto) {
-        protoKey.append("Find a  details ranking for ");
-        for(GroupKey g: dto.getGroupBy()){
-            protoKey.append(g.getDimension()).append(", ");
-        }
-        protoKey.append(" after ordering them according to ");
-        for(OrderSpec order: dto.getOrders()){
-            protoKey.append(order.getField()).append(" ").append(order.getDirection()).append(", ");
-        }
-        protoKey.append("\n");
-    }
-    public void getBooleanProtoKey(StringBuilder protoKey, OlapQueryDto dto) {
-        protoKey.append("Find a Boolean answer if ");
-        for(int i = 0; i < dto.getPostAggregations().size(); i++) {
-            PostAggregationDto postAggregation = dto.getPostAggregations().get(i);
-            if(checkIfBooleanComparison(postAggregation.getType())) {
-                protoKey.append(postAggregation.getArgs().getFirst()).append(" ")
-                        .append(postAggregation.getType().value).append(" ").append(postAggregation.getArgs().getLast());
+    private void appendPostAggregations(StringBuilder sb, List<PostAggregationDto> postAggregations) {
+        if (postAggregations == null || postAggregations.isEmpty()) return;
+        sb.append("Apply post aggregations operations ");
+        for (PostAggregationDto p : postAggregations) {
+                    sb.append(p.getType())
+                    .append(" to the operands ");
+            List<String> args = p.getArgs();
+            switch (p.getType()) {
+                case RATIO ->
+                        sb.append(args.get(0)).append(" / ").append(args.get(1));
+                case DIFFERENCE ->
+                        sb.append(args.get(0)).append(" - ").append(args.get(1));
+                case EQ, GT, LT, GTE, LTE ->
+                        sb.append(args.get(0)).append(" ")
+                                .append(p.getType())
+                                .append(" ")
+                                .append(args.get(1));
+                default ->
+                        sb.append(String.join(", ", args));
             }
+            sb.append(" AS ").append(p.getAlias());
+            sb.append(",\n");
         }
-        protoKey.append("\n");
     }
-    public void getRatioProtoKey(StringBuilder protoKey,OlapQueryDto dto) {
-        protoKey.append("Calculate the ratio between ");
-        for(int i = 0; i < dto.getPostAggregations().size(); i++) {
-            PostAggregationDto postAggregation = dto.getPostAggregations().get(i);
-            if(postAggregation.getType().equals(PostAggregationType.RATIO)) {
-                protoKey.append(postAggregation.getArgs().getFirst()).append(" AND ").append(postAggregation.getArgs().getLast());
-            }
+    private void appendOrder(StringBuilder sb, List<OrderSpec> orders) {
+        if (orders == null || orders.isEmpty()) return;
+        sb.append("Create an ordering by ");
+        for (OrderSpec o : orders) {
+                    sb.append(o.getField())
+                    .append(" ")
+                    .append(o.getDirection())
+                    .append(",\n");
         }
-        protoKey.append("\n");
     }
-    public void getDifferenceProtoKey(StringBuilder protoKey,OlapQueryDto dto) {
-        protoKey.append("Calculate the difference between ");
-        for(int i = 0; i < dto.getPostAggregations().size(); i++) {
-            PostAggregationDto postAggregation = dto.getPostAggregations().get(i);
-            if(postAggregation.getType().equals(PostAggregationType.DIFFERENCE)) {
-                protoKey.append(postAggregation.getArgs().getFirst()).append(" AND ").append(postAggregation.getArgs().getLast());
-            }
+    private void appendLimitOffset(StringBuilder sb, Integer limit, Integer offset) {
+        if (limit != null) {
+            sb.append("Limit ").append(limit).append(",\n");
         }
-        protoKey.append("\n");
-    }
-    public void getCountProtoKey(StringBuilder protNl, OlapQueryDto dto) {
-        protNl.append("Find the count ");
-        for(String r : dto.getReturns()) protNl.append(r).append(", ");
-    }
-    public void getAggregationProtoKey(StringBuilder protNl, OlapQueryDto dto) {
-        protNl.append("Find the total sum of ");
-        for(String r : dto.getReturns()) protNl.append(r).append(", ");
-    }
-    public void getDominantAttributionProtoKey(StringBuilder protNl, OlapQueryDto dto) {
-        protNl.append("Find the dominant ");
-        for(GroupKey g : dto.getGroupBy()) protNl.append(g.getDimension()).append(", ");
-        protNl.append(" according to the order of ");
-        for(OrderSpec order: dto.getOrders()) protNl.append(order.getField()).append(", ");
-    }
-    public void getPriorityOrderProtoKey(StringBuilder protoKey, OlapQueryDto dto) {
-        protoKey.append("Rank ");
-        for(GroupKey groupKey : dto.getGroupBy()) {
-            protoKey.append(groupKey.getDimension().toString().toLowerCase()).append(",");
+        if (offset != null) {
+            sb.append("skip ").append(offset).append(",\n");
         }
-        protoKey.append(" according to ");
-        for(OrderSpec order: dto.getOrders()) {
-            protoKey.append(order.getField()).append(" ").append(order.getDirection()).append(",");
-        }
-        if(dto.getLimit() != null)protoKey.append(" fetch top ").append(dto.getLimit());
-        if(dto.getOffset() != null)protoKey.append(" skip first ").append(dto.getLimit()).append(" row ");
     }
-    public Boolean checkIfBooleanComparison(PostAggregationType type){
-        return type.equals(PostAggregationType.EQ) || type.equals(PostAggregationType.GT) || type.equals(PostAggregationType.LT) ||
-                type.equals(PostAggregationType.GTE) || type.equals(PostAggregationType.LTE);
+    private void appendReturn(StringBuilder sb, List<String> returns) {
+        if (returns == null || returns.isEmpty()) return;
+        sb.append("return ");
+        sb.append(String.join(", ", returns));
+        sb.append(".\n");
+    }
+    private String formatFilterInline(Filter f) {
+        return f.getDimension() + " " +
+                f.getOperator().getValue() + " " +
+                formatValue(f.getValue());
+    }
+    private String formatValue(Object value) {
+        if (value == null) return "NULL";
+        if (value instanceof List<?> list) {
+            return "[" + list.stream()
+                    .map(Object::toString)
+                    .collect(Collectors.joining(", ")) + "]";
+        }
+        return value.toString();
     }
 }
